--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div class="jumbotron">
-  <h1>
-    NgStopwatch
-  </h1>
-  <app-timer></app-timer>
+<div class="page-header">
+  <h1>NgStopwatch</h1>
 </div>
+<app-timer></app-timer>
